# EmotionRecognition_App

./: CMakeLists.txt  README.md  emotion_recongition.cpp  main.cpp  test.cpp  test2.cpp  test_opencv
models/: frozen_model.pb  frozen_model_new.pb  saved_model.pb
